<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="218dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="10dp"
                        app:srcCompat="@mipmap/app_icon_round" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="2dp"
                            android:text="@string/app_name"
                            android:textColor="@color/colorText"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="100dp"
                            android:paddingBottom="10dp"
                            android:text="@string/app_version"
                            android:textAlignment="textEnd"
                            android:textColor="@color/colorText"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:orientation="horizontal"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="bilibili ID：" />

                            <TextView
                                android:id="@+id/t_BLBL"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="onBiliBiliClick"
                                android:text="charlin55"
                                android:textColor="@color/colorText" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:orientation="horizontal"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            android:paddingBottom="0dp">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="QQ群：" />

                            <TextView
                                android:id="@+id/t_QQ"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="onQqQunClick"
                                android:text="1029905111"
                                android:textColor="@color/colorText" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            android:paddingBottom="0dp">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="教程地址："
                                android:textAlignment="textEnd" />

                            <TextView
                                android:id="@+id/t_cv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:onClick="onCvClick"
                                android:text="cv5165668"
                                android:textColor="@color/colorText" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingTop="50dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    android:text="@string/shuomin"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingTop="50dp"
                    android:text="BiliBili推广"
                    android:textColor="@color/colorText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="270dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/charlin55" />

                    <Button
                        android:id="@+id/guanzhu_button"
                        android:layout_width="65dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@color/colorText"
                        android:text="+关注"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>